--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "projetos",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "accepts": "^2.0.0",
     "body-parser": "^2.2.0",
