Corrigido script start no package.json

--- a/projeto-fitness/package.json
+++ b/projeto-fitness/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "projeto-fitness",
+  "name": "projeto-fitness-backend",
   "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mongoose": "^8.13.2"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9"
   }
 }
