--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "projetos",
+  "name": "projeto-fitness-backend",
   "version": "1.0.0",
-  "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "accepts": "^2.0.0",
@@ -88,9 +88,6 @@
     "webidl-conversions": "^7.0.0",
     "whatwg-url": "^14.2.0",
     "wrappy": "^1.0.2"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
